<resources>
    <string name="app_name">Javan Workshop</string>
    <string name="wonderful_indonesia">Wonderful Indonesia</string>

    <string name="happy_birthday">Happy Birthday</string>
    <string name="greeting_for">Happy Birthday, Gan!</string>
    <string name="greeting_from">From, Dani!</string>

    <string name="just_java">Just Java</string>
    <string name="name">Name</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="order_summary_name">
        Name: <xliff id="name" example="Dani">%s</xliff>
    </string>
    <string name="thank_you">Thank You!</string>

    <string name="court_counter">Court Counter</string>
</resources>
